--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -4,7 +4,7 @@
                  slot="secondary"></ion-buttons>
     <ion-title>Profile</ion-title>
     <ion-buttons messaging-button
-                 slot="primary"></ion-buttons>
+                 slot="end"></ion-buttons>
   </ion-toolbar>
 </ion-header>
 <ion-content class="bg-blue">
