--- a/src/pages/scholarships-list/scholarships-list.html
+++ b/src/pages/scholarships-list/scholarships-list.html
@@ -9,7 +9,7 @@
            *ngIf="list?.name">Scholarships</div> {{ list?.name || 'Scholarships' }}
     </ion-title>
     <ion-buttons messaging-button
-                 slot="primary"></ion-buttons>
+                 slot="end"></ion-buttons>
   </ion-toolbar>
   <ion-toolbar class="ion-no-padding"
                *ngIf="list?.name !== 'Applying'
