--- a/src/pages/tasks/tasks.html
+++ b/src/pages/tasks/tasks.html
@@ -18,7 +18,7 @@
       </ng-template>
     </ion-title>
     <ion-buttons messaging-button
-                 slot="primary"></ion-buttons>
+                 slot="end"></ion-buttons>
   </ion-toolbar>
 </ion-header>
 <ion-content class="bg-grayLight">
