--- a/src/pages/college/college.html
+++ b/src/pages/college/college.html
@@ -1,7 +1,11 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
+      <!-- <ion-back-button></ion-back-button> -->
+      <ion-button (click)="goBack()">
+        <ion-icon slot="icon-only"
+                  name="arrow-back"></ion-icon>
+      </ion-button>
     </ion-buttons>
     <ion-title *ngIf="college && college.name">
       <div class="avatar-title">
