--- a/src/pages/colleges/colleges.html
+++ b/src/pages/colleges/colleges.html
@@ -8,7 +8,57 @@
   </ion-toolbar>
 </ion-header>
 <ion-content class="bg-grayLight">
-  <ion-grid class="ion-no-padding"
+  <ion-list>
+    <ng-template let-i="index"
+                 let-tile
+                 ngFor
+                 [ngForOf]="tiles">
+      <ion-item lines="none"
+                *ngIf="tile.isLocked"
+                (click)="viewList(tile)"
+                [class.recommended]="tile.name === 'Recommended' && recommendations > 0"
+                [class.text-white]="tile.inverse"
+                [color]="tile.inverse ? 'blue50' : 'white'"
+                [hidden]="shouldHide(tile) || hiddenTiles[tile.name]"
+                [ngClass]="tile.inverse ? 'bg-blue50' : 'bg-white'">
+        <ion-avatar slot="start">
+          <img [src]="tile.iconUrl" />
+        </ion-avatar>
+        <ion-label>{{ tile.name }}</ion-label>
+        <ion-badge color="green"
+                   slot="end"
+                   *ngIf="tile.name === 'Recommended' && recommendations >= 1 && !user.isParent"> {{ recommendations }}
+        </ion-badge>
+      </ion-item>
+      <ion-item-sliding #slidingItem
+                        *ngIf="!tile.isLocked"
+                        [class.recommended]="tile.name === 'Recommended' && recommendations > 0"
+                        [hidden]="shouldHide(tile) || hiddenTiles[tile.name]"
+                        [ngClass]="tile.inverse ? 'bg-blue50' : 'bg-white'">
+        <ion-item lines="none"
+                  (click)="viewList(tile)">
+          <ion-avatar slot="start">
+            <img [src]="tile.iconUrl" />
+          </ion-avatar>
+          <ion-label>{{ tile.name }}</ion-label>
+        </ion-item>
+        <ion-item-options side="end">
+          <ion-item-option class="lowercase"
+                           color="primary"
+                           *ngIf="tile.isCustom"
+                           (click)="editTile(tile, slidingItem, i)">
+            <ion-icon name="create"></ion-icon> Edit
+          </ion-item-option>
+          <ion-item-option class="lowercase"
+                           color="red"
+                           (click)="hideTile(tile, slidingItem, i)">
+            <ion-icon name="close"></ion-icon> Delete
+          </ion-item-option>
+        </ion-item-options>
+      </ion-item-sliding>
+    </ng-template>
+  </ion-list>
+  <!-- <ion-grid class="ion-no-padding"
             tiles>
     <ion-row>
       <ion-col *ngFor="let tile of tiles; let i = index"
@@ -64,5 +114,5 @@
         </ion-card>
       </ion-col>
     </ion-row>
-  </ion-grid>
+  </ion-grid> -->
 </ion-content>
